adjust photos page, resolve overflow issue

--- a/stylesheet_about.css
+++ b/stylesheet_about.css
@@ -11,11 +11,6 @@ body {
     padding: 0px;
     overflow-x: hidden; 
 }
-	/*if you want a background image
-	
-	background-image: url(Rinjani.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;*/
 
 .header {
 	width: 100%;
@@ -276,8 +271,7 @@ span {
 	.headercontainer {
 	width: 350px;
 	position: absolute;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: -3%;
 	}
 	
 	.logocontainer {
