--- a/stylesheet_home.css
+++ b/stylesheet_home.css
@@ -12,7 +12,7 @@ body {
     overflow-x: hidden; 
 }
 	
-	/*if you want a background image
+	/*for background image
 	
 	background-image: url(Rinjani.jpg);
 	background-size: cover;
@@ -24,6 +24,7 @@ body {
 	background-color: #FDFEFE;
 	height: 80px;
 	position: fixed;
+	overflow-x: hidden;
 }
 
 .headercontainer {
@@ -181,14 +182,14 @@ span {
 	.headercontainer {
 	width: 350px;
 	position: absolute;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: -3%;
 	}
 	
 	.logocontainer {
 	margin-top: 18px;
 	position: absolute;
 	margin-left: 3%;
+	height: 10px;
 	}
 
 	.nav {
@@ -227,16 +228,17 @@ span {
 	margin-top: 180px;
 	margin-left: auto;
 	margin-right: auto;
-	width: 480px;
+	width: 100%;
 	position: relative;
 	}
 	
 	.image_iconcontainer {
-	width: 480px;
+	width: 100%;
+	height: auto;
 	}
 
 	#mainimage {
-	width: 480px;
+	width: 100%;
 	height: auto;
 	margin: 0 auto;
 	}
