--- a/stylesheet_reading.css
+++ b/stylesheet_reading.css
@@ -11,11 +11,6 @@ body {
     padding: 0px;
     overflow-x: hidden; 
 }
-	/*if you want a background image
-	
-	background-image: url(Rinjani.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;*/
 
 .header {
 	width: 100%;
@@ -24,6 +19,7 @@ body {
 	height: 80px;
 	position: fixed;
 	z-index: 1;
+	overflow-x: hidden;
 }
 
 .headercontainer {
@@ -144,8 +140,7 @@ span {
 	.headercontainer {
 	width: 350px;
 	position: absolute;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: -3%;
 	}
 	
 	.logocontainer {
