--- a/stylesheet_writing.css
+++ b/stylesheet_writing.css
@@ -24,6 +24,7 @@ body {
 	height: 80px;
 	position: fixed;
 	z-index: 1;
+	overflow-x: hidden;
 }
 
 .headercontainer {
@@ -145,8 +146,7 @@ span {
 	.headercontainer {
 	width: 350px;
 	position: absolute;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: -3%;
 	}
 	
 	.logocontainer {
